tests/ui/attach-error-operation-removed.stderr
error[E0599]: no method named `operation` found for struct `AttachError` in the current scope
 --> tests/ui/attach-error-operation-removed.rs:2:19
  |
2 |     let _ = error.operation();
  |                   ^^^^^^^^^ method not found in `AttachError`
