tests/ui/attach-error-operation-removed.rs
fn touch(error: hibana::runtime::AttachError) {
    let _ = error.operation();
}

fn main() {}
